# minha-estante

./: README.md  package-lock.json  package.json
api/: .env  Makefile  README.rst  alembic.ini  database.py  main.py  models.py  pyproject.toml
api/alembic/versions/: 016061df6dd7_init.py  1d12be689438_criando_tabelas.py
api/app/: crud.py  database.py  models.py  schemas.py  server.py  settings.py
api/tests/: test_minha_estante.py
src/: App.vue  main.js  router.js
src/components/auth/: LoginForm.vue  RegisterForm.vue
src/components/books/: BookRegistrationForm.vue
src/components/ui/: BaseButton.vue  BaseCard.vue  BaseToggle.vue  FormCard.vue  IconButton.vue
src/pages/: HomePage.vue  NotFound.vue
src/pages/auth/: LoginPage.vue  RegisterPage.vue
src/pages/books/: BooksList.vue  NewBook.vue
src/store/: index.js
src/store/books/: index.js
