[tool.poetry]
name = "minha-estante"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
SQLAlchemy = "^1.4.12"
psycopg2-binary = "^2.8.6"
coloredlogs = {extras = ["colorama"], version = "^15.0"}
colorama = "^0.4.4"
pydantic = "^1.8.1"
python-multipart = "^0.0.5"
requests = "^2.25.1"
pytest = "^6.2.3"
asyncio = "^3.4.3"
loguru = "^0.5.3"
Jinja2 = "^3.0.1"
tailer = "^0.4.1"
aiofiles = "^0.7.0"
pytz = "^2021.1"
alembic = "^1.7.4"
python-dotenv = "^0.19.0"
python-decouple = "^3.5"



[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
